# CelebV-HQ

./: data  download_and_process.py  download_celebvhq_torrent.sh  extract_audio.sh  extract_audio_parallel.sh  main.py  prepare_dataset.ipynb  pyproject.toml  transcribe_batched_parallel.py  transcribe_parallel.sh  transcribe_parallel_gpu.sh  transcribe_with_fallback.py
