[project]
name = "celebv-hq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "ipykernel>=6.29.5",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "youtube-dl>=2021.12.17",
]
